Fix alignment of the password suggestions in RTL on iOS.

The bug happened because layoutSubviews() was called twice. So that the rects were shifted twice as well.

Bug: 843557,844407
Cq-Include-Trybots: luci.chromium.try:ios-simulator-full-configs;master.tryserver.chromium.mac:ios-simulator-cronet
Change-Id: I2336416264a24ef8904c0b67831dd117c82a76ba
Reviewed-on: https://chromium-review.googlesource.com/1064414
Commit-Queue: Vasilii Sukhanov <vasilii@chromium.org>
Reviewed-by: Sylvain Defresne <sdefresne@chromium.org>
Cr-Commit-Position: refs/heads/master@{#560543}
Former-commit-id: 7fa70444c56ac0511606dd3a9b8f9800fd774d7f